ios layout issues

--- a/2/Assets/css/style.css
+++ b/2/Assets/css/style.css
@@ -1,3 +1,7 @@
+div {
+    margin-right: 0;
+}
+
 .container {
     position: relative;
 }
